--- a/view/index.html
+++ b/view/index.html
@@ -7,37 +7,38 @@
   <link rel="stylesheet" href="../style/style.css"/>
 </head>
 <body>
-  <div class="player-container">
+
   <div class="player" id="player1">
     <h2>Player 1</h2>
     <p>Score: <span id="score1">0</span></p>
     <button id="dice_player1">Roll</button>
-  </div>
+  </div>  
+
   <div class="container">
-    <div class="cell" id="jail">Jail</div>
-    <div class="cell" id="land3">Keff <br> 140M</div>
+    <div class="cell jail"  id="jail">Jail</div>
+    <div class="cell" id="land3_1">Keff <br> 140M</div>
     <div class="cell" id="electro">electric company</div>
-    <div class="cell" id="land3">kasserine<br> 140M</div>
+    <div class="cell" id="land3_">kasserine<br> 140M</div>
     <div class="cell" id="railroad">railroad</div>
     <div class="cell"id="community_chest">community_chest</div>
     <div class="cell" id="land4">Sfax<br> 180M</div>
     <div class="cell" id="land4">Gabes<br> 180M</div>
     <div class="cell" id="parking">Free Parking</div>
-    <div class="cell" id="land2">Zarzis<br> 100M</div>
+    <div class="cell" id="land2_2">Zarzis<br> 100M</div>
     <div class="cell"id="chance">chance</div>
-    <div class="cell"id="land2">Ben Gerdane<br> 100M</div>
+    <div class="cell"id="land2_1">Ben Gerdane<br> 100M</div>
     <div class="cell" id="land5">Tbarka<br> 220M</div>
-    <div class="cell" id="tax">Tax</div>
+    <div class="cell" id="tax_1">Tax</div>
     <div class="cell"id="land5">Beja<br> 220M</div>
+    <div class="cell railroad" id="5">railroad</div>
     <div class="cell" id="railroad">railroad</div>
-    <div class="cell" id="railroad">railroad</div>
-    <div class="cell"id="land1">Nabeul <br> 60M</div>
+    <div class="cell"id="4">Nabeul <br> 60M</div>
     <div class="cell"id="land6">karouin  <br> 260M</div>
-    <div class="cell" id="community_chest">community_chest</div>
+    <div class="cell community_chest" id="3">community_chest</div>
     <div class="cell" id="water">water company</div>
-    <div class="cell" id="land1" >Beni Khalled <br> 60M</div>
+    <div class="cell land1" id="2" >Beni Khalled <br> 60M</div>
     <div class="cell" id="land6">Sidi Bouzidi <br> 260M</div>
-    <div class="cell" id="go">Go  <br><br>(collect 200dt) </div>
+    <div class="cell go" id="1">Go  <br><br>(collect 200dt) </div>
     <div class="cell"id="land8">Nafta<br> 350M</div>
     <div class="cell" id="tax">Tax</div>
     <div class="cell"id="land8">Gafsa<br> 350M</div>
@@ -45,16 +46,17 @@
     <div class="cell" id="chance">chance</div>
     <div class="cell"id="land7">Kelibia<br> 300M</div>
     <div class="cell"id="land7">Djerba<br> 300M</div>
-    <div class="cell" id="jail_direction">Go to Jail</div>
+    <div class="cell " id="jail_direction">Go to Jail</div>
      <div class="center-image">
-    <img src="../media/SAT-Travel.-Aviones-LH-960-x-670-px.jpg" alt="Center Logo">
     </div>
-  </div>
-  <div class="player-container">
+  </div>  
   <div class="player" id="player2">
     <h2>Player 2</h2>
     <p>Score: <span id="score2">0</span></p>
     <button id="dice_player2">Roll</button>
-  </div>
+   </div>  
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+  <script src="../script/script.js"></script>
 </body>
 </html>
