--- a/view/index.html
+++ b/view/index.html
@@ -15,38 +15,38 @@
   </div>  
 
   <div class="container">
-    <div class="cell jail"  id="jail">Jail</div>
-    <div class="cell" id="land3_1">Keff <br> 140M</div>
-    <div class="cell" id="electro">electric company</div>
-    <div class="cell" id="land3_">kasserine<br> 140M</div>
-    <div class="cell" id="railroad">railroad</div>
-    <div class="cell"id="community_chest">community_chest</div>
-    <div class="cell" id="land4">Sfax<br> 180M</div>
-    <div class="cell" id="land4">Gabes<br> 180M</div>
-    <div class="cell" id="parking">Free Parking</div>
-    <div class="cell" id="land2_2">Zarzis<br> 100M</div>
-    <div class="cell"id="chance">chance</div>
-    <div class="cell"id="land2_1">Ben Gerdane<br> 100M</div>
-    <div class="cell" id="land5">Tbarka<br> 220M</div>
-    <div class="cell" id="tax_1">Tax</div>
-    <div class="cell"id="land5">Beja<br> 220M</div>
+    <div class="cell jail"  id="9">Jail</div>
+    <div class="cell land3" id="10">El Kef <br> 140M</div>
+    <div class="cell electro" id="11">Electric Company</div>
+    <div class="cell land3" id="12">Kasserine<br> 140M</div>
+    <div class="cell railroad" id="13">railroad</div>
+    <div class="cell community_chest"id="14">Community Chest</div>
+    <div class="cell land4" id="15">Sfax<br> 180M</div>
+    <div class="cell land4" id="16">Gabes<br> 180M</div>
+    <div class="cell parking" id="17">Free Parking</div>
+    <div class="cell land2" id="8">Zarzis<br> 100M</div>
+    <div class="cell chance" id="18">Chance</div>
+    <div class="cell land2" id="7">Ben Gerdane<br> 100M</div>
+    <div class="cell land5" id="19">Tabarka<br> 220M</div>
+    <div class="cell tax" id="6">Tax</div>
+    <div class="cell land5" id="20">Beja<br> 220M</div>
     <div class="cell railroad" id="5">railroad</div>
-    <div class="cell" id="railroad">railroad</div>
-    <div class="cell"id="4">Nabeul <br> 60M</div>
-    <div class="cell"id="land6">karouin  <br> 260M</div>
-    <div class="cell community_chest" id="3">community_chest</div>
-    <div class="cell" id="water">water company</div>
+    <div class="cell railroad" id="21">railroad</div>
+    <div class="cell land1" id="4">Nabeul<br>60M</div>
+    <div class="cell land6" id="22">Kairouan<br>260M</div>
+    <div class="cell community_chest" id="3">Community Chest</div>
+    <div class="cell water" id="23">Water Company</div>
     <div class="cell land1" id="2" >Beni Khalled <br> 60M</div>
-    <div class="cell" id="land6">Sidi Bouzidi <br> 260M</div>
-    <div class="cell go" id="1">Go  <br><br>(collect 200dt) </div>
-    <div class="cell"id="land8">Nafta<br> 350M</div>
-    <div class="cell" id="tax">Tax</div>
-    <div class="cell"id="land8">Gafsa<br> 350M</div>
-    <div class="cell" id="railroad">railroad</div>
-    <div class="cell" id="chance">chance</div>
-    <div class="cell"id="land7">Kelibia<br> 300M</div>
-    <div class="cell"id="land7">Djerba<br> 300M</div>
-    <div class="cell " id="jail_direction">Go to Jail</div>
+    <div class="cell land6" id="24">Sidi Bouzidi <br> 260M</div>
+    <div class="cell go" id="1">Go<br><br>(collect 200dt) </div>
+    <div class="cell land8" id="32">Nefta<br> 350M</div>
+    <div class="cell tax" id="31">Tax</div>
+    <div class="cell land8" id="30">Gafsa<br>350M</div>
+    <div class="cell railroad" id="29">Railroad</div>
+    <div class="cell chance" id="28">chance</div>
+    <div class="cell land7" id="27">Kelibia<br>300M</div>
+    <div class="cell land7" id="26">Djerba<br>300M</div>
+    <div class="cell jail_direction" id="25">Go to Jail</div>
      <div class="center-image">
     </div>
   </div>  
