--- a/view/index.html
+++ b/view/index.html
@@ -24,15 +24,15 @@
     <div class="cell" id="land4">Sfax<br> 180M</div>
     <div class="cell" id="land4">Gabes<br> 180M</div>
     <div class="cell" id="parking">Free Parking</div>
-    <div class="cell" id="land2_2">Zarzis<br> 100M</div>
+    <div class="cell land2" id="land2_2">Zarzis<br> 100M</div>
     <div class="cell"id="chance">chance</div>
-    <div class="cell"id="land2_1">Ben Gerdane<br> 100M</div>
+    <div class="cell land2"id="7">Ben Gerdane<br> 100M</div>
     <div class="cell" id="land5">Tbarka<br> 220M</div>
-    <div class="cell" id="tax_1">Tax</div>
+    <div class="cell tax" id="6">Tax</div>
     <div class="cell"id="land5">Beja<br> 220M</div>
     <div class="cell railroad" id="5">railroad</div>
     <div class="cell" id="railroad">railroad</div>
-    <div class="cell"id="4">Nabeul <br> 60M</div>
+    <div class="cell land1"id="4">Nabeul<br> 60M</div>
     <div class="cell"id="land6">karouin  <br> 260M</div>
     <div class="cell community_chest" id="3">community_chest</div>
     <div class="cell" id="water">water company</div>
