--- a/view/index.html
+++ b/view/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="player" id="player1">
-  <h2>Player 1</h2>
+  <h2>Player 1 (Green)</h2>
   <p>Account: <span id="score1">1500</span> M</p>
   <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Alea_1.png" id="dice_player1" class="dice">
   <button id="buy_property1">Buy</button>
@@ -35,7 +35,7 @@
     <div class="cell railroad" id="21" rent="-150">railroad <br>-150M</div>
     <div class="cell land1" id="4"  price="60" rent="-10" >Nabeul<br>60/10M</div>
     <div class="cell land6" id="22"  price="260" rent="-60" >Kairouan<br>260/60M</div>
-    <div class="cell community_chest" id="3" rent="-150">Community Chest <br>+150M</div>
+    <div class="cell community_chest" id="3" rent="150">Community Chest <br>+150M</div>
     <div class="cell water" id="23" rent="-150">Water Company <br>+150M</div>
     <div class="cell land1" id="2"  price="60" rent="-10" >Beni Khalled<br>60/10M</div>
     <div class="cell land6" id="24"  price="260" rent="-60" >Sidi Bouzidi<br>260/60M</div>
@@ -52,7 +52,7 @@
     </div>
 </div>    
   <div class="player" id="player2">
-  <h2>Player 2</h2>
+  <h2>Player 2 (Red)</h2>
   <p>Account: <span id="score2">1500</span> M</p>
   <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Alea_1.png" id="dice_player2" class="dice">
   <button id="buy_property2">Buy</button>
